--- a/resolutions.html
+++ b/resolutions.html
@@ -86,7 +86,7 @@
                     </h1>
                     <section class="_qwh3w5">
                       <h2 class="_zmovaf">From</h2>
-                      <div class="_1enplf8">
+                      <div class="explore-filter-menu__body-content">
                         <div class="_40z4k8">
                           <div class="_1js2oqjc">
                             <div
