--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -109,7 +109,7 @@
                     </h1>
                     <section class="_qwh3w5">
                       <h2 class="_zmovaf">Send to</h2>
-                      <div class="_1enplf8">
+                      <div class="explore-filter-menu__body-content">
                         <div class="_40z4k8">
                           <div class="_1js2oqjc">
                             <div
