filter sm & medium

--- a/basics.html
+++ b/basics.html
@@ -1137,7 +1137,7 @@
             </div>
           </div>
           <footer class="modal__footer">
-            <div class="_ls0e43">
+            <div class="margin__left-auto">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
               </button>
@@ -2169,7 +2169,7 @@
             </div>
           </div>
           <footer class="modal__footer">
-            <div class="_ls0e43">
+            <div class="margin__left-auto">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
               </button>
