--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3200,7 +3200,7 @@
                             class="_11eqlma4"
                           >
                             <div class="_1pmsz24">
-                              <div class="_1yfus1e">
+                              <div class="full__height">
                                 <div class="_1n9ujnd">
                                   <div class="_1oujxnw">
                                     <div class="_1p7iugi">
@@ -3279,7 +3279,7 @@
                             class="_11eqlma4"
                           >
                             <div class="_1pmsz24">
-                              <div class="_1yfus1e">
+                              <div class="full__height">
                                 <div class="_1n9ujnd">
                                   <div class="_1oujxnw">
                                     <div class="_1p7iugi">
