--- a/insights.html
+++ b/insights.html
@@ -217,7 +217,7 @@
                               data-section-id="EXPERIENCES_HOST_PERFORMANCE_HUB_DATA_FILTER_BAR"
                               style="padding-top: 8px; padding-bottom: 16px"
                             >
-                              <div class="_1yfus1e">
+                              <div class="full__height">
                                 <div
                                   class="dir dir-ltr"
                                   role="group"
