--- a/resources.html
+++ b/resources.html
@@ -482,7 +482,7 @@
                                           flex: 0 0 242px;
                                         "
                                       >
-                                        <div data-key="0" class="_1yfus1e">
+                                        <div data-key="0" class="full__height">
                                           <div class="_1cljw3l">
                                             <a
                                               href="/resources/hosting-experiences/a/the-3-pillars-of-a-quality-experience-387"
@@ -583,7 +583,7 @@
                                           flex: 0 0 242px;
                                         "
                                       >
-                                        <div data-key="1" class="_1yfus1e">
+                                        <div data-key="1" class="full__height">
                                           <div class="_1cljw3l">
                                             <a
                                               href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
@@ -685,7 +685,7 @@
                                           flex: 0 0 242px;
                                         "
                                       >
-                                        <div data-key="2" class="_1yfus1e">
+                                        <div data-key="2" class="full__height">
                                           <div class="_1cljw3l">
                                             <a
                                               href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
@@ -786,7 +786,7 @@
                                           flex: 0 0 242px;
                                         "
                                       >
-                                        <div data-key="3" class="_1yfus1e">
+                                        <div data-key="3" class="full__height">
                                           <div class="_1cljw3l">
                                             <a
                                               href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
@@ -887,7 +887,7 @@
                                           flex: 0 0 242px;
                                         "
                                       >
-                                        <div data-key="4" class="_1yfus1e">
+                                        <div data-key="4" class="full__height">
                                           <div class="_1cljw3l">
                                             <a
                                               href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
@@ -988,7 +988,7 @@
                                           flex: 0 0 242px;
                                         "
                                       >
-                                        <div data-key="5" class="_1yfus1e">
+                                        <div data-key="5" class="full__height">
                                           <div class="_1cljw3l">
                                             <a
                                               href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
