--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1039,7 +1039,7 @@
                         </button>
                       </div>
                       <div class="_g7lz6c">Group size</div>
-                      <div class="_ls0e43">
+                      <div class="margin__left-auto">
                         <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
