--- a/transaction_history.html
+++ b/transaction_history.html
@@ -512,8 +512,8 @@
                           <div style="margin-top: 8px">
                             <div>
                               <div class="relative">
-                                <div class="_4nwxh0j">
-                                  <div class="_qgvrjoy">
+                                <div class="full__height-width">
+                                  <div class="full__margin-bottom">
                                     <div role="tablist" class="_csc5ey">
                                       <div class="inline-block">
                                         <button
