--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1556,7 +1556,7 @@
             </div>
           </div>
           <footer class="modal__footer">
-            <div class="_ls0e43">
+            <div class="margin__left-auto">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
               </button>
@@ -2588,7 +2588,7 @@
             </div>
           </div>
           <footer class="modal__footer">
-            <div class="_ls0e43">
+            <div class="margin__left-auto">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
               </button>
