--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1036,7 +1036,7 @@
                         </button>
                       </div>
                       <div class="_g7lz6c">What we’ll do</div>
-                      <div class="_ls0e43">
+                      <div class="margin__left-auto">
                         <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
